ファイル完成品こみっと～

--- a/01_Java/022_Spring/まとめ.md
+++ b/01_Java/022_Spring/まとめ.md
@@ -1,38 +1,32 @@
 # 課題に取り組んでみてのいろいろ
+
+## 取り組んでよかった点
+
+- 業務以外でコードを書く姿勢が少し身についた
+- SpringMVCの基本的な流れを復習することができた
+
 ## よくわからなかった点
 
-- MVC
+- ControllerクラスからViewへの遷移
 
-viewsフォルダの拡張子をjsp以外のものにすると、コントローラークラスで遷移先を指定しても、遷移してくれない。<br/>
+viewsフォルダの拡張子をjsp以外のものにすると、コントローラークラスで遷移先を指定しても遷移してくれない。<br/>
 application-configのviewResolverにhtmlを指定してるのに遷移してくれない。<br/>
-今後調べていく必要あり。
+現在調査中…。
 
-- application-configの設定
+- application-config.xmlの設定
 
-なんとかbeanが沢山ある。<br/>
-どういうことがしたい時はどのbeanに設定するのか、class要素にどのクラスを指定すればいいのか一度本で確認しておく必要あり。<br/>
-ネットで調べてもよくわからない…
+なんとかbeanが沢山ありすぎて、どういうことがしたい時はどのbeanに設定するのか、class要素にどのクラスを指定すればいいのか一度本で確認しておく必要あり。<br/>
+ネットで調べただけではいまいちよく分からない点が多々ある。
 
 - web.xmlの書き方
 
-ほとんどコピペ…<br/>
-エラーのデフォルトページの設定とか、web.xmlに
-
-
+ほとんどネットに落ちているもののコピペになってしまった。<br/>
+エラーのデフォルトページの設定とか、web.xmlにどのようなことが設定できるのか調べていきたい。
 
 ## ざっくりと感想
 
-一ヶ月に１回プルリクを投げたかったので提出いたします！<br/>
-Springを少し触っていたのが約１年前ということで、結構忘れている
+Springを使いこなすためには、まずはapplication-configファイルの書き方を抑えなきゃな～と思います。<br/>
+beanとかbeanのclass要素とか、色々候補がありすぎて、ネットでぱっと調べただけだと何を使っていいのかわからない…。<br/>
+また、Springのモジュールは今回使ったMVC,AOPの他にも沢山あるので、時間のあるときに調べて行きたいです。
 
-
-cloneすればすぐに動かすことができるSpringのプロジェクトを作成しました。<br/>
-ローカルサーバーに乗せて/springsampleでHello！が出るはずです。<br/>
-MVCとAOPを使用しています。
-
-MVCでよくわからなかった点は、viewsフォルダ内の拡張子をjsp以外のものにするとコントローラークラスから遷移してくれなくなることです。<br/>
-application-configのviewResolverにhtmlを指定してるのに遷移してくれない。
-
-サービスクラスのメソッドが呼ばれるとAOP（ロガー）が動くようになってます。
-
-他にも時間あればExceptionHandllerとか実装しようと思っていたけど、とりあえず１ヶ月に一つあげとこうかなと思ったのでここで一度プルリク出します。
+最後に…次回はもっと計画的に課題を進めようと思います。
