まとめ修正

--- a/01_Java/022_Spring/まとめ.md
+++ b/01_Java/022_Spring/まとめ.md
@@ -1,32 +1,29 @@
-# 課題に取り組んでみてのいろいろ
+# まとめ
 
 ## 取り組んでよかった点
 
 - 業務以外でコードを書く姿勢が少し身についた
 - SpringMVCの基本的な流れを復習することができた
+- Springの各種モジュールの働きについて詳しく知ることができた
 
-## よくわからなかった点
+## よく分からなかった点
 
 - ControllerクラスからViewへの遷移
 
-viewsフォルダの拡張子をjsp以外のものにすると、コントローラークラスで遷移先を指定しても遷移してくれない。<br/>
-application-configのviewResolverにhtmlを指定してるのに遷移してくれない。<br/>
-現在調査中…。
+viewsフォルダの拡張子をjsp以外のものにすると、コントローラークラスで遷移先を指定しても遷移しないという事象が発生中。
+application-configのviewResolverにhtmlを指定してるのに遷移してくれず…現在調査中。
 
 - application-config.xmlの設定
 
-なんとかbeanが沢山ありすぎて、どういうことがしたい時はどのbeanに設定するのか、class要素にどのクラスを指定すればいいのか一度本で確認しておく必要あり。<br/>
-ネットで調べただけではいまいちよく分からない点が多々ある。
+～～beanが沢山ありすぎて、どういうことがしたい時はどのbeanに設定するのか、class要素にどのクラスを指定すればいいのか、ぱっとネットで調べただけでは分からないことが多いので、一度本で確認しておく必要があるなと感じた。
 
 - web.xmlの書き方
 
-ほとんどネットに落ちているもののコピペになってしまった。<br/>
+ほとんどネットに落ちているもののコピペになってしまった。
 エラーのデフォルトページの設定とか、web.xmlにどのようなことが設定できるのか調べていきたい。
 
-## ざっくりと感想
+## 感想
 
-Springを使いこなすためには、まずはapplication-configファイルの書き方を抑えなきゃな～と思います。<br/>
-beanとかbeanのclass要素とか、色々候補がありすぎて、ネットでぱっと調べただけだと何を使っていいのかわからない…。<br/>
-また、Springのモジュールは今回使ったMVC,AOPの他にも沢山あるので、時間のあるときに調べて行きたいです。
-
-最後に…次回はもっと計画的に課題を進めようと思います。
+Springを使いこなすためには、まずはapplication-configファイルの書き方を抑えなければなと思います。
+現時点ではbeanやbeanのclass要素など、色々候補がありすぎてネットでぱっと調べただけだと何を使っていいのかわからないという状況です。
+また、Springのモジュールは今回使ったMVC、AOPの他にも沢山あるので、時間のあるときにそれらを取り入れたアプリを構築していけたらなと思います。
