--- a/01_Java/022_Spring/まとめ.md
+++ b/01_Java/022_Spring/まとめ.md
@@ -8,25 +8,24 @@
 
 ## よく分からなかった点
 
-- ControllerクラスからViewへの遷移
+### ControllerクラスからViewへの遷移
 
 viewsフォルダの拡張子をjsp以外のものにすると、コントローラークラスで遷移先を指定しても遷移しないという事象が発生中。
 application-configのviewResolverにhtmlを指定してるのに遷移してくれず…現在調査中。
 
-- application-config.xmlの設定
+### application-config.xmlの設定
 
-～～beanが沢山ありすぎて、どういうことがしたい時はどのbeanに設定するのか、class要素にどのクラスを指定すればいいのか、ぱっとネットで調べただけでは分からないことが多いので、一度本で確認しておく必要があるなと感じた。
+XXXbeanが沢山ありすぎて、どういうことがしたい時はどのbeanに設定するのか、class要素にどのクラスを指定すればいいのか、ぱっとネットで調べただけでは分からないことが多いので、一度本で確認しておく必要があるなと感じた。
 
 また、途中までapplication-config.xmlをMETA-INF配下に置いていたのだが、突然サーバーが起動時のweb.xmlを読み込む際にapplication-config.xmlがどこにあるか分からない、というエラーをはくようになった。
-WEB-INF配下に変更することで動くようにはなったのだが、なぜいきなりMETA-INF配下が見れなくなってしまったのか分からない。こちらも現在調査中…。
+WEB-INF配下に変更することで動くようにはなったのだが、なぜいきなりMETA-INF配下が見れなくなってしまったのか分からない。こちらも現在調査中。
 
-- web.xmlの書き方
+### web.xmlの書き方
 
-ほとんどネットに落ちているもののコピペになってしまった。
-エラーのデフォルトページの設定とか、web.xmlにどのようなことが設定できるのか調べていきたい。
+ほとんどネットに落ちているもののコピペになってしまった。エラーのデフォルトページの設定とか、web.xmlにどのようなことが設定できるのか調べていきたい。
 
 ## 感想
 
 Springを使いこなすためには、まずはapplication-configファイルの書き方を抑えなければなと思います。
-現時点ではbeanやbeanのclass要素など、色々候補がありすぎてネットでぱっと調べただけだと何を使っていいのかわからないという状況です。
-また、Springのモジュールは今回使ったMVC、AOPの他にも沢山あるので、時間のあるときにそれらを取り入れたアプリを構築していけたらなと思います。
+
+現時点ではbeanやbeanのclass要素など、色々候補がありすぎてネットでぱっと調べただけだと何を使っていいのかわからないという状況です。また、Springのモジュールは今回使ったMVC、AOPの他にも沢山あるので、時間のあるときにそれらを取り入れたアプリを構築していけたらなと思います。
